--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,22 @@
 }
 
 body {
-  background-colo: #111;
+  background-color: #111;
   color: #FFF;
-  negrito: 0;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: 'Roboto', 'sans-serif';
+  }
+
+  .lists {
+    margin-top: -100px;
   }
 
   footer {
-    margin: 50px 0;
+    margin: 50px 0px;
     text-align: center;
     }
 
-    .looding {
+    .loading {
       position: fixed;
       left: 0;
       top: 0;
